--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         </span>
         <span><p>Vendredi</p></span><span><p>matin</p><p>après-midi</p></span>
         <span>
-            <p><input type="text" name="vendredi_matin" placeholder="Développement"/></p>
+            <p><input type="text" name="vendredi_matin" placeholder="Médiation"/></p>
             <p><input type="text" name="vendredi_apres_midi" placeholder="REPAIR CAFÉ"/></p>
         </span>
     </main>
